<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="18dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="18dp"
    android:orientation="vertical"
    tools:context=".DetalleContacto">

    <TextView
        android:id="@+id/tvCabezal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/cabezal"
        android:textSize="24sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCabezal"
        android:text="@string/nombre1"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:text="@string/fechaNacimiento1"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tvTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFecha"
        android:text="@string/telefono1"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tvMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTel"
        android:text="@string/email1"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMail"
        android:text="@string/descripcion1"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_below="@id/tvDescripcion"
        android:text="@string/btEditar"
        android:layout_marginTop="40dp"
        android:onClick="editarDatos"/>


</LinearLayout>