<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:importantForAutofill="no"
        android:textSize="14sp"
        android:hint="@string/nombre"
        android:layout_marginTop="32dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvfecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechaNacimiento"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <DatePicker
        android:id="@+id/dtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvfecha"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="16dp"
        android:accessibilityPaneTitle="Fecha Nacimiento"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        tools:targetApi="p"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/telefono"
        app:layout_constraintTop_toBottomOf="@+id/dtFecha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="14sp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/etTel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="14sp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="14sp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btSiguiente"
        app:layout_constraintTop_toBottomOf="@+id/etDesc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="detalleContact" />

</androidx.constraintlayout.widget.ConstraintLayout>